add scheduled notification and stuff

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+        <receiver android:name=".FridgeAlarmReceiver" android:exported="false"/>
 
         <activity
             android:name=".FridgeListActivity"
